modified feature in style css to prevent hamburger menu from collapsing in iphone 5 view

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
-body{
-	margin: 0;
-	padding: 0;
-	min-width: 320px !important;
-	width: 100%;
-	
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 #container{
 	margin:0
 	padding 0;
-	width: 100%;
+	/*width: 100%;*/
 	height: 100%;
 	min-width: 320px !important;
+	max-width: 100%;
+	overflow-x: hidden;
 }
